Fjernet opphørsdato fra avvik i refusjonendringer og lagt det inn som… (#6036)
Fjernet opphørsdato fra avvik i refusjonendringer og lagt det inn som egen logging. Logger kun nye endringer med  saksnummer, stp, opphørsdato og refusjonsbeløp.